Added more examples

--- a/examples/countdown-from-new-years-without-seconds.html
+++ b/examples/countdown-from-new-years-without-seconds.html
@@ -19,16 +19,15 @@
 				// Grab the current date
 				var currentDate = new Date();
 
-				// Set some date in the future. In this, it's always 9 days
-				var futureDate  = new Date(currentDate.getTime() + (3600 * 60 * 60 * 60));
+				// Set some date in the past. In this case, it's always been since Jan 1
+				var pastDate  = new Date(currentDate.getFullYear(), 1, 1);
 
 				// Calculate the difference in seconds between the future and current date
-				var diff = futureDate.getTime() / 1000 - currentDate.getTime() / 1000;
+				var diff = currentDate.getTime() / 1000 - pastDate.getTime() / 1000;
 
-				// Instantiate a coutdown FlipClock without seconds
+				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
 					clockFace: 'DailyCounter',
-					countdown: true,
 					showSeconds: false
 				});
 			});
