--- a/examples/countdown-to-new-years-without-seconds.html
+++ b/examples/countdown-to-new-years-without-seconds.html
@@ -19,7 +19,7 @@
 				// Grab the current date
 				var currentDate = new Date();
 
-				// Set some date in the future. In this, it's always 9 days
+				// Set some date in the future. In this case, it's always Jan 1
 				var futureDate  = new Date(currentDate.getFullYear() + 1, 1, 1);
 
 				// Calculate the difference in seconds between the future and current date
