fix #84 – set asset paths to reference files in '../src/' directory

--- a/examples/base.html
+++ b/examples/base.html
@@ -1,17 +1,17 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/flipclock.css">
+		<link rel="stylesheet" href="../src/flipclock/css/flipclock.css">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../js/flipclock/libs/base.js"></script>
-		<script src="../js/flipclock/flipclock.js"></script>
-		<script src="../js/flipclock/faces/counter.js"></script>
-		<script src="../js/flipclock/faces/hourlycounter.js"></script>
-		<script src="../js/flipclock/faces/dailycounter.js"></script>
-		<script src="../js/flipclock/faces/minutecounter.js"></script>
-		<script src="../js/flipclock/faces/twentyfourhourclock.js"></script>
-		<script src="../js/flipclock/faces/twelvehourclock.js"></script>
+		<script src="../src/flipclock/js/libs/base.js"></script>
+		<script src="../src/flipclock/js/libs/flipclock.js"></script>
+		<script src="../src/flipclock/js/faces/counter.js"></script>
+		<script src="../src/flipclock/js/faces/hourlycounter.js"></script>
+		<script src="../src/flipclock/js/faces/dailycounter.js"></script>
+		<script src="../src/flipclock/js/faces/minutecounter.js"></script>
+		<script src="../src/flipclock/js/faces/twentyfourhourclock.js"></script>
+		<script src="../src/flipclock/js/faces/twelvehourclock.js"></script>
 		
 	</head>
 	<body>
