--- a/examples/countdown-from-new-years.html
+++ b/examples/countdown-from-new-years.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/flipclock.css">
+		<link rel="stylesheet" href="../src/flipclock/css/flipclock.css">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../js/flipclock/libs/base.js"></script>
-		<script src="../js/flipclock/flipclock.js"></script>
-		<script src="../js/flipclock/faces/dailycounter.js"></script>		
+		<script src="../src/flipclock/js/libs/base.js"></script>
+		<script src="../src/flipclock/js/libs/flipclock.js"></script>
+		<script src="../src/flipclock/js/faces/dailycounter.js"></script>		
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
