--- a/examples/countdown-start-callback.html
+++ b/examples/countdown-start-callback.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/flipclock.css">
+		<link rel="stylesheet" href="../src/flipclock/css/flipclock.css">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../js/flipclock/libs/base.js"></script>
-		<script src="../js/flipclock/flipclock.js"></script>
-		<script src="../js/flipclock/faces/hourlycounter.js"></script>
-		<script src="../js/flipclock/faces/minutecounter.js"></script>
+		<script src="../src/flipclock/js/libs/base.js"></script>
+		<script src="../src/flipclock/js/libs/flipclock.js"></script>
+		<script src="../src/flipclock/js/faces/hourlycounter.js"></script>
+		<script src="../src/flipclock/js/faces/minutecounter.js"></script>
 		
 	</head>
 	<body>
