--- a/examples/simple-counter.html
+++ b/examples/simple-counter.html
@@ -1,12 +1,10 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/flipclock.css">
-		
+		<link rel="stylesheet" href="../compiled/flipclock.css">
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../js/flipclock/libs/base.js"></script>
-		<script src="../js/flipclock/flipclock.js"></script>
-		<script src="../js/flipclock/faces/counter.js"></script>		
+		<script src="../compiled/flipclock.js"></script>		
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
@@ -25,7 +23,7 @@
 
 				// Attach a click event to a button a increment the clock
 				$('button').click(function() {
-					clock.increment();
+					clock.setValue(10);
 
 					// Or you could decrease the clock
 					// clock.decrement();
