- (Bug Fix) Fixed an issue with the minimumDigits property. - (Feature) Added ability to define a minimumDigit property in the FlipClock factory.

--- a/examples/simple-counter.html
+++ b/examples/simple-counter.html
@@ -20,7 +20,8 @@
 
 				// Instantiate a counter
 				clock = $('.clock').FlipClock(0, {
-					clockFace: 'Counter'
+					clockFace: 'Counter',
+					minimumDigits: 4
 				});
 
 				// Attach a click event to a button a increment the clock
