- (Bug Fix) Fixed a number of issues from Github that wouldn't merge - Fixed an issue with the instantiation process not working consistently with the jQuery instantiator

--- a/examples/simple-counter.html
+++ b/examples/simple-counter.html
@@ -19,7 +19,7 @@
 			$(document).ready(function() {
 
 				// Instantiate a counter
-				clock = $('.clock').FlipClock(0, {
+				clock = new FlipClock($('.clock'), {
 					clockFace: 'Counter',
 					minimumDigits: 4
 				});
