--- a/examples/countdown-start-callback.html
+++ b/examples/countdown-start-callback.html
@@ -10,19 +10,27 @@
 	<div class="clock" style="margin:2em;"></div>
 	<div class="message"></div>
 
+	<button class="start">Start Clock</button>
+
 	<script type="text/javascript">
 		var clock;
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock(10, {
+			clock = $('.clock').FlipClock(605, {
 		        clockFace: 'MinuteCounter',
 		        countdown: true,
+		        autoStart: false,
 		        callbacks: {
 		        	start: function() {
 		        		$('.message').html('The clock has started!');
 		        	}
 		        }
+		    });
+
+		    $('.start').click(function(e) {
+
+		    	clock.start();
 		    });
 
 		});
