--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -10,29 +10,14 @@
 	<div class="clock" style="margin:2em;"></div>
 	<div class="message"></div>
 
-	<button class="start">Start Clock</button>
-
 	<script type="text/javascript">
 		var clock;
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock(10, {
-		        clockFace: 'MinuteCounter',
-		        countdown: true,
-		        autoStart: false,
-		        callbacks: {
-		        	start: function() {
-		        		$('.message').html('The clock has started!');
-		        	}
-		        }
+			clock = $('.clock').FlipClock({
+		        clockFace: 'HourlyCounter'
 		    });
-
-		    $('.start').click(function(e) {
-
-		    	clock.start();
-		    });
-
 		});
 	</script>
 	
