--- a/examples/simple-counter.html
+++ b/examples/simple-counter.html
@@ -46,6 +46,19 @@
 				$('.reset').click(function() {
 					clock.reset();
 				});
+
+				/*
+				// Use this code if you want to autoincrement the counter.
+				var timer = new FlipClock.Timer(clock, {
+					callbacks: {
+						interval: function() {
+							clock.increment();
+						}
+					}
+				});
+
+				timer.start();
+				*/
 			});
 		</script>
 		
