--- a/examples/base.html
+++ b/examples/base.html
@@ -16,15 +16,19 @@
 		$(document).ready(function() {
 			var clock;
 
-			clock = $('.clock').FlipClock(10, {
-		        clockFace: 'MinuteCounter',
-		        countdown: true,
+			clock = $('.clock').FlipClock({
+		        clockFace: 'DailyCounter',
+		        autoStart: false,
 		        callbacks: {
 		        	stop: function() {
 		        		$('.message').html('The clock has stopped!')
 		        	}
 		        }
 		    });
+				    
+		    clock.setTime(220880);
+		    clock.setCountdown(true);
+		    clock.start();
 
 		});
 	</script>
