- (Examples) Updated example to match all the new code changes

--- a/examples/countdown-from-new-years-without-seconds.html
+++ b/examples/countdown-from-new-years-without-seconds.html
@@ -26,7 +26,9 @@
 				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
 					clockFace: 'DailyCounter',
-					showSeconds: false
+					clockFaceOptions: {
+						showSeconds: false
+					}
 				});
 			});
 		</script>
