--- a/examples/daily-counter-countdown.html
+++ b/examples/daily-counter-countdown.html
@@ -18,16 +18,16 @@
 
 			clock = $('.clock').FlipClock({
 		        clockFace: 'DailyCounter',
-		        autoStart: false,
-		        callbacks: {
-		        	stop: function() {
-		        		$('.message').html('The clock has stopped!')
-		        	}
-		        }
+				clockFaceOptions: {
+		        	autoStart: false,
+				},
+				onStop: function() {
+	        		$('.message').html('The clock has stopped!');
+				}
 		    });
 				    
-		    clock.setTime(220880);
-		    clock.setCountdown(true);
+		    clock.setTime(10);
+		    clock.face.setCountdown(true);
 		    clock.start();
 
 		});
