--- a/examples/daily-counter.html
+++ b/examples/daily-counter.html
@@ -16,7 +16,10 @@
 		$(document).ready(function() {
 			
 			clock = $('.clock').FlipClock({
-		        clockFace: 'DailyCounter'
+		        clockFace: 'DailyCounter',
+		        clockFaceOptions: {
+		        	showSeconds: false
+		        }
 		    });
 		});
 	</script>
