--- a/examples/localization.html
+++ b/examples/localization.html
@@ -15,7 +15,9 @@
 			$(document).ready(function() {
 				clock = $('.clock').FlipClock({
 					clockFace: 'DailyCounter',
-					language: 'es'
+					clockFaceOptions: {
+						language: 'es'
+					}
 				});
 			});
 		</script>
