--- a/examples/simple-counter-autostart.html
+++ b/examples/simple-counter-autostart.html
@@ -17,7 +17,9 @@
 				// Instantiate a counter
 				clock = new FlipClock($('.clock'), {
 					clockFace: 'Counter',
-					autoStart: true
+					clockFaceOptions: {
+						autoStart: true
+					}
 				});
 			});
 		</script>
