--- a/examples/countdown-to-new-years-without-seconds.html
+++ b/examples/countdown-to-new-years-without-seconds.html
@@ -26,8 +26,10 @@
 				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
 					clockFace: 'DailyCounter',
-					countdown: true,
-					showSeconds: false
+					clockFaceOption: {
+						countdown: true,
+						showSeconds: false
+					}
 				});
 			});
 		</script>
