--- a/examples/countdown-to-new-years.html
+++ b/examples/countdown-to-new-years.html
@@ -26,7 +26,9 @@
 				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
 					clockFace: 'DailyCounter',
-					countdown: true
+					clockFaceOption: {
+						countdown: true
+					}
 				});
 			});
 		</script>
