--- a/examples/twelve-hour-clock-without-seconds.html
+++ b/examples/twelve-hour-clock-without-seconds.html
@@ -15,7 +15,9 @@
 			$(document).ready(function() {
 				clock = $('.clock').FlipClock({
 					clockFace: 'TwelveHourClock',
-					showSeconds: false
+					clockFaceOptions: {
+						showSeconds: false
+					}
 				});
 			});
 		</script>
