- (Bug Fix) Fixed an issue where includeSeconds wasn't working for hourly and minute counter faces

--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -16,7 +16,10 @@
 		$(document).ready(function() {
 			
 			clock = $('.clock').FlipClock({
-		        clockFace: 'HourlyCounter'
+		        clockFace: 'HourlyCounter',
+		        clockFaceOptions: {
+		        	includeSeconds: false
+		        }
 		    });
 		});
 	</script>
