--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -15,7 +15,7 @@
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock({
+			clock = $('.clock').FlipClock(1000, {
 		        clockFace: 'HourlyCounter',
 		        clockFaceOptions: {
 		        	includeSeconds: false
