--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -16,7 +16,7 @@
 		$(document).ready(function() {
 			
 			clock = $('.clock').FlipClock(1000, {
-		        clockFace: 'HourlyCounter',
+		        clockFace: 'MinuteCounter',
 		        clockFaceOptions: {
 		        	includeSeconds: false
 		        }
