--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -15,10 +15,10 @@
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock(1000, {
+			clock = $('.clock').FlipClock({
 		        clockFace: 'HourlyCounter',
 		        clockFaceOptions: {
-		        	includeSeconds: false
+		        	includeSeconds: true
 		        }
 		    });
 		});
