--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -15,9 +15,10 @@
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock({
+			clock = $('.clock').FlipClock(1000, {
 		        clockFace: 'HourlyCounter',
 		        clockFaceOptions: {
+		        	autoPlay: false,
 		        	includeSeconds: true
 		        }
 		    });
