Updated hourly example

--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -15,10 +15,10 @@
 		
 		$(document).ready(function() {
 			
-			clock = $('.clock').FlipClock(1000, {
+			clock = $('.clock').FlipClock(1018, {
 		        clockFace: 'HourlyCounter',
 		        clockFaceOptions: {
-		        	includeSeconds: true
+		        	includeSeconds: false
 		        }
 		    });
 		});
