--- a/examples/countdown-to-new-years-without-seconds.html
+++ b/examples/countdown-to-new-years-without-seconds.html
@@ -26,7 +26,7 @@
 				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
 					clockFace: 'DailyCounter',
-					clockFaceOption: {
+					clockFaceOptions: {
 						countdown: true,
 						showSeconds: false
 					}
