--- a/examples/localization.html
+++ b/examples/localization.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	  <meta charset="utf-8">
 		<link rel="stylesheet" href="../compiled/flipclock.css">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -15,7 +16,7 @@
 			$(document).ready(function() {
 				clock = $('.clock').FlipClock({
 					clockFace: 'DailyCounter',
-					language: 'es'
+					language: 'ua'
 				});
 			});
 		</script>
