Fixed bugs in examples

--- a/examples/countdown-from-new-years-without-seconds.html
+++ b/examples/countdown-from-new-years-without-seconds.html
@@ -25,10 +25,7 @@
 
 				// Instantiate a coutdown FlipClock
 				clock = $('.clock').FlipClock(diff, {
-					clockFace: 'DailyCounter',
-					clockFaceOptions: {
-						showSeconds: false
-					}
+					clockFace: 'DailyCounter'
 				});
 			});
 		</script>
