--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -18,7 +18,7 @@
 			clock = $('.clock').FlipClock(1018, {
 		        clockFace: 'HourlyCounter',
 		        clockFaceOptions: {
-		        	includeSeconds: false
+		        	showSeconds: true
 		        }
 		    });
 		});
