--- a/examples/localization.html
+++ b/examples/localization.html
@@ -16,7 +16,8 @@
 				clock = $('.clock').FlipClock({
 					clockFace: 'DailyCounter',
 					clockFaceOptions: {
-						language: 'es'
+						language: 'es',
+						showSeconds: true
 					}
 				});
 			});
