--- a/examples/daily-counter-countdown.html
+++ b/examples/daily-counter-countdown.html
@@ -17,7 +17,7 @@
 			var clock;
 
 			clock = $('.clock').FlipClock({
-		        clockFace: 'DailyCounter',
+		        clockFace: 'HourlyCounter',
 				clockFaceOptions: {
 		        	autoStart: false,
 				},
@@ -26,8 +26,8 @@
 				}
 		    });
 				    
-		    clock.setTime(10);
 		    clock.face.setCountdown(true);
+		    clock.setFaceValue(10);
 		    clock.start();
 
 		});
