--- a/examples/english-alphabetical-clock.html
+++ b/examples/english-alphabetical-clock.html
@@ -14,11 +14,12 @@
 			
 			$(document).ready(function() {
 				
-				clock = new FlipClock($('.clock'), 'BC', {
+				clock = new FlipClock($('.clock'), {
 					clockFace: 'EnglishAlphabet',
 					clockFaceOptions: {
-						countdown: true,
-						autoStart: true
+						countdown: false,
+						autoStart: true,
+						capitalLetters: true
 					}
 				});
 
