--- a/examples/minute-counter-overflow.html
+++ b/examples/minute-counter-overflow.html
@@ -18,7 +18,7 @@
                 clockFace: 'MinuteCounter'
             });
 
-            clock.setTime(60*100-5);
+            clock.setFaceValue(60*100-5);
 		});
 	</script>
 	
