fix calling removed function setTime

--- a/examples/base.html
+++ b/examples/base.html
@@ -12,7 +12,7 @@
 
 	<script type="text/javascript">
 		var clock;
-		
+
 		$(document).ready(function() {
 			var clock;
 
@@ -25,13 +25,13 @@
 		        	}
 		        }
 		    });
-				    
-		    clock.setTime(220880);
+
+		    clock.setFaceValue(220880);
 		    clock.setCountdown(true);
 		    clock.start();
 
 		});
 	</script>
-	
+
 	</body>
 </html>
