--- a/examples/test.html
+++ b/examples/test.html
@@ -10,7 +10,7 @@
 			const el = document.querySelector('.clock');
 
 			const clock = FlipClock.make(el, new Date(2018, 11, 26), {
-				face: 'YearCounter',
+				face: 'HourCounter',
 				countdown: false,
 				showSeconds: true,
 				showLabels: true
