--- a/examples/test.html
+++ b/examples/test.html
@@ -9,8 +9,8 @@
 		<script>
 			const el = document.querySelector('.clock');
 
-			const clock = FlipClock.make(el, new Date(2018, 11, 26), {
-				face: 'HourCounter',
+			const clock = FlipClock.make(el, new Date(1850, 11, 26), {
+				face: 'YearCounter',
 				countdown: false,
 				showSeconds: true,
 				showLabels: true
