--- a/examples/countdown-to-new-years-without-seconds.html
+++ b/examples/countdown-to-new-years-without-seconds.html
@@ -2,37 +2,26 @@
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
-		
+
 		<script type="text/javascript">
-			var clock;
+			var el = document.querySelector('.clock');
 
-			$(document).ready(function() {
+			// Grab the current date
+			var currentDate = new Date();
 
-				// Grab the current date
-				var currentDate = new Date();
+			// Set some date in the past. In this case, it's always been since Jan 1
+			var date  = new Date(currentDate.getFullYear() + 1, 0, 1);
 
-				// Set some date in the future. In this case, it's always Jan 1
-				var futureDate  = new Date(currentDate.getFullYear() + 1, 0, 1);
-
-				// Calculate the difference in seconds between the future and current date
-				var diff = futureDate.getTime() / 1000 - currentDate.getTime() / 1000;
-
-				// Instantiate a coutdown FlipClock
-				clock = $('.clock').FlipClock(diff, {
-					clockFace: 'DailyCounter',
-					clockFaceOptions: {
-						countdown: true,
-						showSeconds: false
-					}
-				});
+			var clock = new FlipClock(el, date, {
+				face: 'DayCounter',
+				showSeconds: false,
+				countdown: true
 			});
 		</script>
-		
+
 	</body>
 </html>
