--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -2,27 +2,18 @@
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
-	<div class="clock" style="margin:2em;"></div>
-	<div class="message"></div>
+		<div class="clock" style="margin:2em;"></div>
 
-	<script type="text/javascript">
-		var clock;
-		
-		$(document).ready(function() {
-			
-			clock = $('.clock').FlipClock(1018, {
-		        clockFace: 'HourlyCounter',
-		        clockFaceOptions: {
-		        	showSeconds: true
-		        }
-		    });
-		});
-	</script>
-	
+		<script type="text/javascript">
+			var el = document.querySelector('.clock');
+
+			var clock = new FlipClock(el, new Date, {
+				face: 'HourCounter'
+			});
+		</script>
+
 	</body>
 </html>
