--- a/examples/load-new-clock-face.html
+++ b/examples/load-new-clock-face.html
@@ -11,7 +11,8 @@
 		var el = document.querySelector('.clock');
 
 		var clock = new FlipClock(el, new Date, {
-			face: 'HourCounter'
+			face: 'HourCounter',
+			showSeconds: false
 		});
 
 		setTimeout(function() {
