--- a/examples/localization.html
+++ b/examples/localization.html
@@ -1,27 +1,19 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
 		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
 
 		<script type="text/javascript">
-			var clock;
-			
-			$(document).ready(function() {
-				clock = $('.clock').FlipClock({
-					clockFace: 'DailyCounter',
-					clockFaceOptions: {
-						language: 'es',
-						showSeconds: true
-					}
-				});
+			var el = document.querySelector('.clock');
+
+			var clock = new FlipClock(el, new Date, {
+				face: 'HourCounter',
+				language: 'es'
 			});
 		</script>
-		
+
 	</body>
 </html>
