--- a/examples/localization-custom-dictionary.html
+++ b/examples/localization-custom-dictionary.html
@@ -9,14 +9,16 @@
 		<script type="text/javascript">
 			var el = document.querySelector('.clock');
 
-			// Grab the current date
-			var currentDate = new Date();
-
-			// Set some date in the past. In this case, it's always been since Jan 1
-			var pastDate  = new Date(currentDate.getFullYear(), 0, 1);
-
-			var clock = new FlipClock(el, pastDate, {
-				face: 'DayCounter'
+			var clock = new FlipClock(el, new Date, {
+				face: 'HourCounter',
+				language: {
+					'years'   : '1',
+					'months'  : '2',
+					'days'    : '3',
+					'hours'   : '4',
+					'minutes' : '5',
+					'seconds' : '6'
+				}
 			});
 		</script>
 
