--- a/examples/multiple-instances.html
+++ b/examples/multiple-instances.html
@@ -1,34 +1,34 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 
 	<div style="clear:both;padding:20px;"><div class="clock-1"></div></div>
-	
+
 	<div style="clear:both;padding:20px"><div class="clock-2"></div></div>
-	
-	<div class="message"></div>
 
 	<script type="text/javascript">
-		var clocks = [];
-		
-		$(document).ready(function() {
-			
-			clocks.push($('.clock-1').FlipClock({
-		        clockFace: 'Counter'
-		    }));
 
-			clocks.push($('.clock-2').FlipClock(15000, {
-		        clockFace: 'Counter'
-		    }));
+		const date = new Date;
 
+		date.setSeconds(date.getSeconds() + 10);
+
+		var el1 = document.querySelector('.clock-1');
+
+		var clock1 = new FlipClock(el1, date, {
+			face: 'MinuteCounter',
+			countdown: false
+		});
+
+		var el2 = document.querySelector('.clock-2');
+
+		var clock2 = new FlipClock(el2, date, {
+			face: 'MinuteCounter',
+			countdown: true
 		});
 	</script>
-	
+
 	</body>
 </html>
