--- a/examples/simple-counter-minimum-digits.html
+++ b/examples/simple-counter-minimum-digits.html
@@ -1,29 +1,17 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
 
 		<script type="text/javascript">
-			var clock;
+			var el = document.querySelector('.clock');
 
-			$(document).ready(function() {
-
-				// Instantiate a counter
-				clock = new FlipClock($('.clock'), {
-					clockFace: 'Counter',
-					clockFaceOptions: {
-						autoStart: true,
-						minimumDigits: 6
-					}
-				});
+			var clock = new FlipClock(el, 0, {
+				minimumDigits: 6
 			});
 		</script>
-		
 	</body>
-</html> 
+</html>
