--- a/examples/twelve-hour-clock.html
+++ b/examples/twelve-hour-clock.html
@@ -2,22 +2,18 @@
 	<head>
 		<link rel="stylesheet" href="../dist/flipclock.css">
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
 
 		<script type="text/javascript">
-			var clock;
-			
-			$(document).ready(function() {
-				clock = $('.clock').FlipClock({
-					clockFace: 'TwelveHourClock'
-				});
+			const el = document.querySelector('.clock');
+
+			const clock = new FlipClock(el, {
+				face: 'TwelveHourClock'
 			});
 		</script>
-		
+
 	</body>
 </html>
