--- a/examples/twenty-four-hour-clock-custom-time.html
+++ b/examples/twenty-four-hour-clock-custom-time.html
@@ -4,22 +4,18 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../dist/flipclock.js"></script>		
+		<script src="../dist/flipclock.js"></script>
 	</head>
 	<body>
 		<div class="clock" style="margin:2em;"></div>
 
 		<script type="text/javascript">
-			var clock;
-			
-			$(document).ready(function() {
-				var date = new Date('2014-01-01 05:02:12 pm');
+			const el = document.querySelector('.clock');
 
-				clock = $('.clock').FlipClock(date, {
-					clockFace: 'TwentyFourHourClock'
-				});
+			const clock = new FlipClock(el, new Date('2014-01-01 05:02:12 pm'), {
+				face: 'TwentyFourHourClock'
 			});
 		</script>
-		
+
 	</body>
 </html>
