--- a/public/Components_Component.js.html
+++ b/public/Components_Component.js.html
@@ -60,7 +60,7 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import { chain, callback, isObject, kebabCase } from '../Helpers/Functions';
+            <pre class="prettyprint source linenums"><code>import { chain, error, callback, isObject, kebabCase } from '../Helpers/Functions';
 
 export default class Component {
 
@@ -77,21 +77,16 @@ export default class Component {
     }
 
     /**
-     * Get the `name` attribute. Uses the `this.constructor.name` by default.
+     * Get the `name` attribute.
      *
      * @type {string}
      */
     get name() {
-        return this.constructor.name;
-    }
+        if(!(this.constructor.defineName instanceof Function)) {
+            error('Every class must define its name.');
+        }
 
-    /**
-     * The `className` attribute. Used for CSS.
-     *
-     * @type {string}
-     */
-    get className() {
-        return kebabCase(this.name);
+        return this.constructor.defineName();
     }
 
     /**
@@ -229,7 +224,7 @@ export default class Component {
      */
     setAttribute(key, value) {
         if(isObject(key)) {
-            this.setAttributes(key)
+            this.setAttributes(key);
         }
         else {
             this[key] = value;
