--- a/public/Components_Divider.js.html
+++ b/public/Components_Divider.js.html
@@ -75,6 +75,15 @@
  */
 export default class Divider extends DomComponent {
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'Divider';
+    }
+
 }
 </code></pre>
         </article>
