--- a/public/Components_FlipClock.js.html
+++ b/public/Components_FlipClock.js.html
@@ -204,7 +204,7 @@ export default class FlipClock extends DomComponent {
 
     set value(value) {
         if(!this.face) {
-            throw new Error('A face must be set before setting a value.')
+            throw new Error('A face must be set before setting a value.');
         }
 
         if(value instanceof FaceValue) {
@@ -295,7 +295,7 @@ export default class FlipClock extends DomComponent {
         isUndefined(this.face.originalValue) &amp;&amp; (this.face.originalValue = this.originalValue);
 
         this.timer.start(() => {
-            this.face.interval(this, fn)
+            this.face.interval(this, fn);
         });
 
         this.face.started(this);
@@ -427,6 +427,15 @@ export default class FlipClock extends DomComponent {
     }
 
     /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'FlipClock';
+    }
+
+    /**
      * Helper method to set the default `Face` value.
      *
      * @param  {Face} value - The default `Face` class.This should be a
@@ -452,7 +461,7 @@ export default class FlipClock extends DomComponent {
             error(ConsoleMessages.theme);
         }
 
-        DefaultValues.theme = value
+        DefaultValues.theme = value;
     }
 
     /**
