--- a/public/Components_Group.js.html
+++ b/public/Components_Group.js.html
@@ -81,6 +81,15 @@ export default class Group extends DomComponent {
         }, (isObject(items) ? items : null), attributes));
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'Group';
+    }
+
 }
 </code></pre>
         </article>
