--- a/public/Components_Label.js.html
+++ b/public/Components_Label.js.html
@@ -80,6 +80,15 @@ export default class Label extends DomComponent {
         }, (isObject(label) ? label : null), attributes));
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'Label';
+    }
+
 }
 </code></pre>
         </article>
