--- a/public/Components_List.js.html
+++ b/public/Components_List.js.html
@@ -130,6 +130,15 @@ export default class List extends DomComponent {
         return item;
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'List';
+    }
+
 }
 </code></pre>
         </article>
