--- a/public/Components_Timer.js.html
+++ b/public/Components_Timer.js.html
@@ -178,6 +178,14 @@ export default class Timer extends Component {
         return this;
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'Timer';
+    }
 }
 </code></pre>
         </article>
