--- a/public/Config_ConsoleMessages.js.html
+++ b/public/Config_ConsoleMessages.js.html
@@ -66,6 +66,7 @@
  * @memberof module:Config/ConsoleMessages
  */
 export default {
+    className: 'The className() is not defined.',
     items: 'The items property must be an array.',
     theme: 'The theme property must be an object.',
     language: 'The language must be an object.',
