--- a/public/Faces_Counter.js.html
+++ b/public/Faces_Counter.js.html
@@ -81,6 +81,14 @@ export default class Counter extends Face {
         instance.value = this.value.value - value;
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'Counter';
+    }
 }
 </code></pre>
         </article>
