--- a/public/Faces_DayCounter.js.html
+++ b/public/Faces_DayCounter.js.html
@@ -86,7 +86,7 @@ export default class DayCounter extends HourCounter {
         ];
 
         if(this.showSeconds) {
-            data.push([this.getSeconds(a, b)])
+            data.push([this.getSeconds(a, b)]);
         }
 
         return data;
@@ -100,6 +100,14 @@ export default class DayCounter extends HourCounter {
         return Math.abs(super.getHours(a, b) % 24);
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'DayCounter';
+    }
 }
 </code></pre>
         </article>
