--- a/public/Faces_HourCounter.js.html
+++ b/public/Faces_HourCounter.js.html
@@ -85,7 +85,7 @@ export default class HourCounter extends MinuteCounter {
         ];
 
         if(this.showSeconds) {
-            data.push([this.getSeconds(a, b)])
+            data.push([this.getSeconds(a, b)]);
         }
 
         return data;
@@ -99,6 +99,14 @@ export default class HourCounter extends MinuteCounter {
         return Math.floor(this.getTotalSeconds(a, b) / 60 / 60);
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'HourCounter';
+    }
 }
 </code></pre>
         </article>
