--- a/public/Faces_TwelveHourClock.js.html
+++ b/public/Faces_TwelveHourClock.js.html
@@ -101,6 +101,14 @@ export default class TwelveHourClock extends TwentyFourHourClock {
 		return groups;
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'TwelveHourClock';
+    }
 }
 </code></pre>
         </article>
