--- a/public/Components_DomComponent.js.html
+++ b/public/Components_DomComponent.js.html
@@ -64,9 +64,9 @@
 import language from '../Helpers/Language';
 import validate from '../Helpers/Validate';
 import translate from '../Helpers/Translate';
-import { error } from '../Helpers/Functions';
 import { isString } from '../Helpers/Functions';
 import ConsoleMessages from '../Config/ConsoleMessages';
+import { error, kebabCase } from '../Helpers/Functions';
 import { swap, createElement } from '../Helpers/Template';
 
 export default class DomComponent extends Component {
@@ -96,6 +96,15 @@ export default class DomComponent extends Component {
                 `${this.name} cannot be rendered because it has no template.`
             );
         }
+    }
+
+    /**
+     * The `className` attribute. Used for CSS.
+     *
+     * @type {string}
+     */
+    get className() {
+        return kebabCase(this.constructor.defineName());
     }
 
     /**
