--- a/public/Components_FaceValue.js.html
+++ b/public/Components_FaceValue.js.html
@@ -135,7 +135,7 @@ export default class FaceValue extends Component {
      * @return {boolean} - `true` is the value is a number.
      */
     isNumber() {
-        return isNumber()
+        return isNumber();
     }
 
     /**
@@ -151,6 +151,15 @@ export default class FaceValue extends Component {
         return new this.constructor(value, Object.assign(
             this.getPublicAttributes(), attributes
         ));
+    }
+
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'FaceValue';
     }
 
 }
