--- a/public/Components_ListItem.js.html
+++ b/public/Components_ListItem.js.html
@@ -79,6 +79,15 @@ export default class ListItem extends DomComponent {
         }, isObject(value) ? value : null, attributes));
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'ListItem';
+    }
+
 }
 </code></pre>
         </article>
