--- a/public/Faces_WeekCounter.js.html
+++ b/public/Faces_WeekCounter.js.html
@@ -87,7 +87,7 @@ export default class WeekCounter extends DayCounter {
         ];
 
         if(this.showSeconds) {
-            data.push([this.getSeconds(a, b)])
+            data.push([this.getSeconds(a, b)]);
         }
 
         return data;
@@ -101,6 +101,14 @@ export default class WeekCounter extends DayCounter {
         return Math.abs(super.getDays(a, b) % 7);
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'WeekCounter';
+    }
 }
 </code></pre>
         </article>
