--- a/public/Faces_YearCounter.js.html
+++ b/public/Faces_YearCounter.js.html
@@ -88,7 +88,7 @@ export default class YearCounter extends WeekCounter {
         ];
 
         if(this.showSeconds) {
-            data.push([this.getSeconds(a, b)])
+            data.push([this.getSeconds(a, b)]);
         }
 
         return data;
@@ -102,6 +102,14 @@ export default class YearCounter extends WeekCounter {
         return Math.abs(super.getWeeks(a, b) % 52);
     }
 
+    /**
+     * Define the name of the class.
+     *
+     * @return {string}
+     */
+    static defineName() {
+        return 'YearCounter';
+    }
 }
 </code></pre>
         </article>
