--- a/examples/responsive-scaling.html
+++ b/examples/responsive-scaling.html
@@ -17,7 +17,7 @@
 			
 			clock = $('.clock').FlipClock({
                 clockFace: 'MinuteCounter',
-                responsiveScaling: 3
+                responsiveScale: 3
 		    });
 		});
 	</script>
