--- a/examples/responsive-scaling.html
+++ b/examples/responsive-scaling.html
@@ -7,7 +7,7 @@
 		<script src="../compiled/flipclock.js"></script>		
 	</head>
 	<body>
-	<div class="clock" style="margin:2em;"></div>
+	<div class="clock" style="margin:2em; margin-left:auto; margin-right:auto"></div>
 	<div class="message"></div>
 
 	<script type="text/javascript">
@@ -17,7 +17,7 @@
 			
 			clock = $('.clock').FlipClock({
                 clockFace: 'MinuteCounter',
-                responsiveScale: 3
+                responsiveScale: 2
 		    });
 		});
 	</script>
