--- a/examples/responsive-scaling.html
+++ b/examples/responsive-scaling.html
@@ -7,7 +7,7 @@
 		<script src="../compiled/flipclock.js"></script>		
 	</head>
 	<body>
-	<div class="clock" style="margin:8em; display: flex; align-items: center; justify-content: center;"></div>
+	<div class="clock" style="margin-top:8em; display: flex; align-items: center; justify-content: center;"></div>
 	<div class="message"></div>
 
 	<script type="text/javascript">
