--- a/public/Faces_HourCounter.js.html
+++ b/public/Faces_HourCounter.js.html
@@ -75,7 +75,7 @@ export default class HourCounter extends MinuteCounter {
 
     format(instance, value) {
         const now = !instance.timer.started ? new Date : value;
-        const originalValue = instance.originalValue || value;
+        const originalValue = value || instance.originalValue;
         const a = !this.countdown ? now : originalValue;
         const b = !this.countdown ? originalValue : now;
 
