--- a/examples/hourly-counter.html
+++ b/examples/hourly-counter.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../compiled/flipclock.css">
-
+		<title>Hourly Counter Clock</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 		<script src="../compiled/flipclock.js"></script>		
